<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_project"
        android:icon="@drawable/group"
        android:title="@string/change_project"
        android:visible="true"
        app:showAsAction="always" />

    <group android:enabled="true">
        <item
            android:id="@+id/make_call"
            android:title="@string/make_call" />
        <item
            android:id="@+id/sync"
            android:title="@string/sync_history" />

        <item
            android:id="@+id/analytics"
            android:title="@string/analytics" />
    </group>

    <item
        android:id="@+id/menu_user"
        android:title="@string/user" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about_app" />

    <item
        android:id="@+id/menu_set_default_dialer"
        android:title="@string/set_default_dialer" />

    <group android:enabled="true">
        <item
            android:id="@+id/signOut"
            android:title="@string/sign_out" />
    </group>

</menu>