<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/login_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/rami_logo_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ramicall_text_logo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:background="#CCFFFFFF"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/domain_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"

            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/login_field_domain"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/black"
            android:hint="@string/login_field_user_id"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"

            android:gravity="center"
            android:text=""
            android:textColor="@color/design_default_color_error"
            android:textSize="14sp" />

        <Button
            android:id="@+id/user_log_in"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/button_register"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressbar_indicator"
            android:layout_width="match_parent"
            android:layout_height="12dp"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>